# kaisho

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CNAME  CONCEPT.md  Dockerfile  KAISHO-REBRAND.md  Makefile  README.md  TRANSLATING.md  docker-compose.yml  index.html  jobs.yaml  kai-server-aarch64-apple-darwin.spec  kaisho_launcher.py  mkdocs.yml  pyproject.toml  run.sh  settings.yaml  sitemap.xml
.github/workflows/: build-desktop.yml  docs.yml  test.yml
ai/advisor/: index.html
ai/cron-jobs/: index.html
ai/providers/: index.html
ai/skills/: index.html
api/: index.html
api/advisor/: index.html
api/clocks/: index.html
api/cloud-sync/: index.html
api/cron/: index.html
api/customers/: index.html
api/dashboard/: index.html
api/github/: index.html
api/inbox/: index.html
api/knowledge/: index.html
api/notes/: index.html
api/settings/: index.html
api/tasks/: index.html
api/websocket/: index.html
cli/: index.html
cli/ask/: index.html
cli/backup/: index.html
cli/briefing/: index.html
cli/clock/: index.html
cli/config/: index.html
cli/contract/: index.html
cli/convert/: index.html
cli/cron/: index.html
cli/customer/: index.html
cli/github/: index.html
cli/inbox/: index.html
cli/knowledge/: index.html
cli/mcp-server/: index.html
cli/notes/: index.html
cli/profiles/: index.html
cli/serve/: index.html
cli/task/: index.html
cli/youtube/: index.html
codesigning/: index.html
concepts/architecture/: index.html
concepts/backends/: index.html
concepts/profiles/: index.html
concepts/sync-expansion-concept/: index.html
concepts/whisper-concept/: index.html
configuration/environment/: index.html
configuration/settings/: index.html
configuration/shortcuts/: index.html
data/: SOUL.md  USER.md  jobs.yaml
data/SKILLS/: budget-review.md
desktop/: README.md  package.json  pnpm-lock.yaml
desktop/src/: index.html  splash.css  splash.js
desktop/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: http.rs  lib.rs  main.rs  sidecar.rs  tray.rs
dev/: index.html
docs/: CONCEPT.md  IMPROVEMENTS.md  cli.md  code-review-v0.9.0.md  codesigning.md  dev.md  index.md  mcp-integration-plan.md  quickstart.md
docs/ai/: advisor.md  cron-jobs.md  providers.md  skills.md
docs/api/: advisor.md  clocks.md  cloud-sync.md  cron.md  customers.md  dashboard.md  github.md  inbox.md  index.md  knowledge.md  notes.md  settings.md  tasks.md  websocket.md
docs/assets/: extra.css
docs/cli/: ask.md  backup.md  briefing.md  clock.md  config.md  contract.md  convert.md  cron.md  customer.md  github.md  inbox.md  index.md  knowledge.md  mcp-server.md  notes.md  profiles.md  serve.md  task.md  youtube.md
elisp/: kaisho.el
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tray.html  vite.config.ts
hooks/: version.py
kaisho/: ai_utils.py  config.py  time_utils.py
kaisho/api/: app.py  (+1 more)
omnicontrol/: config.py
product/: BUGS.md  DESIGN-SPEC.md  GAP-ANALYSIS.md  INFRASTRUCTURE.md  MONETIZATION.md  README.md  SAAS-READINESS.md  TRAY-TIMER.md  WEBSITE-BRIEF.md
prompts/: daily-briefing.md  hn-ai-daily.md  onboard.md  project-update.md  weekly-scout.md  weekly-summary.md
scripts/: build-sidecar.ps1  build-sidecar.sh  bump-version.sh  demo-data.sh  dev-desktop.sh  dev-web.sh  docs-screenshots.py  mcp-server.sh  pwa_screenshots.py  screenshots.py  screenshots.sh  serve-website.sh
search/: search_index.json
templates/: SOUL.md  USER.md  jobs.yaml  settings.yaml  user.yaml
tests/: conftest.py  test_api.py  test_backends.py  test_backup.py  test_cli.py  test_cloud_sync_bidirectional.py  test_communications.py  test_convert.py  test_cron.py  test_cron_cloud_creds.py  test_cron_output_normalize.py  test_cron_templates.py  test_external_editor.py  test_inbox_sync.py  test_kanban.py  test_kb_frontmatter.py  test_kb_index.py  test_knowledge.py  test_load_prompt.py  test_mcp.py  test_multi_profile_sync.py  test_note_sync.py  test_ollama_cloud_key.py  test_ollama_cloud_key_migration.py  test_org_parser.py  test_placeholders.py  test_task_sync.py  test_tool_guards.py  test_use_kaisho_models.py  test_user_profile_tools.py
(+408 files in other folders)
