[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaisho"
version = "0.6.2"
requires-python = ">=3.12"
dependencies = [
    "certifi",
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "watchfiles>=0.21",
    "python-multipart>=0.0.9",
    "youtube-transcript-api>=1.0",
    "websocket-client>=1.7",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
kai = "kaisho.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["kaisho*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
