[package]
name = "kaisho-desktop"
version = "0.1.0"
description = "Kaisho Desktop App"
authors = ["Riding Bytes"]
license = "MIT"
repository = "https://github.com/ridingbytes/kaisho"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
